--- a/plan.html
+++ b/plan.html
@@ -14,7 +14,7 @@
 <h2>Success Evaluation</h2>
 <p> ...</p>
 <h2>Target Audience</h2>
-<p>...</p>
+<p>The target audience is people, of any age, with an interest in music. TCMC has a wide range of music genres and each concert/genre needs to appeal to that fan base appropriately.</p>
 <h2>Content</h2>
 <p>...</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
