--- a/plan.html
+++ b/plan.html
@@ -16,7 +16,27 @@
 <h2>Target Audience</h2>
 <p>The target audience is people, of any age, with an interest in music. TCMC has a wide range of music genres and each concert/genre needs to appeal to that fan base appropriately.</p>
 <h2>Content</h2>
-<p>...</p>
+<p>
+      <dl>
+        <dt><strong>Home</strong></dt>
+            <dd>- Call to action (sign up)</dd>
+            <dd>- General info (office hours etc)</dd>
+        <dt><strong>Events</strong></dt>
+            <dd>- Event list (sorted by date - soonest first)</dd>
+        <dt><strong>Bulletin Board</strong></dt>
+            <dd>- User's notices (list)</dd>
+        <dt><strong>Artists</strong></dt>
+            <dd>- Featured artist</dd>
+            <dd>- Artist List</dd>
+        <dt><strong>Members</strong></dt>
+            <dd>- Information on different memberships (costs and benefits etc.)</dd>
+            <dd>- Membership sign up form</dd>
+        <dt><strong>About</strong></dt>
+            <dd>- Information on the history of TCMC</dd>
+        <dt><strong>Contact</strong></dt>
+            <dd>- Contact information (location, phone number, email, etc.)</dd>
+    </dl>
+</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p> ...</p>
 <h2>GitHub Repository</h2>
