--- a/plan.html
+++ b/plan.html
@@ -8,7 +8,7 @@
 <body>
 <h1>CP1406/CP2010 - 2015 - TCMC Project Plan</h1>
 <h2>The HTML 5</h2>
-<p><strong>Members:</strong> Jake Dixon, Holly O'Toole, Christopher Shepherdson, Chandler Deep, Philip Bowrey</p>
+<p><strong>Members:</strong> Jake Dixon, Holly O'Toole, Christopher Shepherdson, Chander Deep, Philip Bowrey</p>
 <h2>Mission Statement</h2>
   <p>...</p>
 <h2>Success Evaluation</h2>
