--- a/plan.html
+++ b/plan.html
@@ -28,6 +28,9 @@
         <dt><strong>Artists</strong></dt>
             <dd>- Featured artist</dd>
             <dd>- Artist List</dd>
+        <dt><strong>Artist Detailed</strong></dt>
+            <dd>- Image of the selected artist</dd>
+            <dd>- Detailed information on the selected artist</dd>
         <dt><strong>Members</strong></dt>
             <dd>- Information on different memberships (costs and benefits etc.)</dd>
             <dd>- Membership sign up form</dd>
