--- a/artistdetailed.html
+++ b/artistdetailed.html
@@ -77,3 +77,24 @@
     
 </body>
 </html>
+
+
+
+<!--Styles specific for this page 
+
+/* --- Artist Detailed --- */
+.artistdetailed-image {
+    width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3em;
+    margin-bottom: 1em;
+}
+
+.artistdetailed-image img {
+    display: block;
+    border: solid 5px #FFF;
+}
+
+--!>
