--- a/tcmc2/report.html
+++ b/tcmc2/report.html
@@ -13,10 +13,10 @@
 <body>    
     <h1>CP1406/CP2010 - 2015 - TCMC Report</h1>
     <h2>The HTML 5</h2>
-    <p><strong>Members (GitHub):</strong>Jake Dixon (jedixo), Holly O'Toole (HAO-AO), Christopher Shepherdson (chrisshepherdson), Philip Bowrey (PhilipbowJCU)</p>
+    <p><strong>Members (GitHub):</strong>Jake Dixon (jedixo), Holly O'Toole (HAO-AO), Christopher Shepherdson (chrisshepherdson), and Philip Bowrey (PhilipbowJCU).</p>
     <a href="http://ditwebtsv.jcu.edu.au/~tcmc04/index.php" target="_blank">Site Home Page</a><br>
     <a href="http://ditwebtsv.jcu.edu.au/~tcmc04/index.php#openModal" target="_blank">Admin Page/Login</a>
-    <p><a href="https://github.com/chrisshepherdson/cp1406-2010-a2" target="_blank">cp1406-2010-a2</a></p>
+    <a href="https://github.com/chrisshepherdson/cp1406-2010-a2" target="_blank">GitHub: cp1406-2010-a2</a>
     
 	<h2>Mission Statement</h2>
     <p>The purpose of this website is to promote the events and existence of the Townsville Community Music Centre in order to: increase and engage the membership of the TMCM; increase ticket sales; and finally, to encourage the participation and involvement of artists.</p>
@@ -24,7 +24,7 @@
 	<h2>Completed Work by Who</h2>
     <ul>
         <li><strong>Jake Dixon:</strong> All the .PHP.</li>
-        <li><strong>Holly O'Toole:</strong> Index, About, and Contact page. Designed the overall website base in HTML/CSS.</li>
+        <li><strong>Holly O'Toole:</strong> Index, About, and Contact page. Designed the overall website base in HTML/CSS, edited the background and edited/created new graphics for individual artists/bulletin/events.</li>
         <li><strong>Christopher Shepherdson:</strong> Events and Bulletin page.</li>
         <li><strong>Philip Bowrey:</strong> Feeder and Membership page.</li>
     </ul>
@@ -35,6 +35,7 @@
     
 	<h2>References</h2>
     <ul>
+	<li>http://pixabay.com/en/lead-singer-stage-performance-show-455750/</li>
 	<li>http://kiarak.com/royalslider/</li>
 	<li>http://smartik.ws/2013/11/smk-accordion-free-jquery-plugin/</li>
 	<li>http://code.jquery.com/jquery-1.11.1.min.js</li>
