updated the report

--- a/tcmc2/report.html
+++ b/tcmc2/report.html
@@ -46,8 +46,17 @@
 	
 	<h2>PMI</h2>
     <p>your group should spend some time reflecting on the process and describe here the Pluses, Minuses and Interesting aspects of your teamwork process and result</p>
-    <p><strong>Pluses: </strong> ...</p>
-    <p><strong>Minuses: </strong> ...</p>
-    <p><strong>Interesting: </strong> ...</p>
+    <p><strong>Pluses: </strong></p>
+	<ul>
+	<li>Although a little difficult to get used to, GitHub was great and easy to use in terms of sharing information and files and monitoring progress of other team members.</li>
+	</ul>
+    <p><strong>Minuses: </strong></p>
+	<ul>
+	<li>The fact that the CP1406 had to wait for the .PHP to be updated when it suited the CP2010 students was a hindrance.</li>
+	</ul>
+    <p><strong>Interesting: </strong></p>
+	<ul>
+	<li>It was interesting to see how the .PHP worked with the HTML and how things came together as a database.</li>
+	</ul>
 </body>
 </html>
