added edit users as admin feature

--- a/tcmc2/report.html
+++ b/tcmc2/report.html
@@ -53,6 +53,9 @@
     <p><strong>Minuses: </strong></p>
 	<ul>
 	<li>The fact that the CP1406 had to wait for the .PHP to be updated when it suited the CP2010 students was a hindrance.</li>
+		<li>too time for people to get used to syncing git before working</li>
+		<li>1406 students didnt know how to update the server therefore it was left to CP2010 who are much busier</li>
+		<li>php is pain to work with when it came to fixing styling problems</li>
 	</ul>
     <p><strong>Interesting: </strong></p>
 	<ul>
