--- a/tcmc2/report.html
+++ b/tcmc2/report.html
@@ -29,7 +29,7 @@ h2 {
 <p>The purpose of this website is to promote the events and existence of the Townsville Community Music Centre in order to: increase and engage the membership of the TMCM; increase ticket sales; and finally, to encourage the participation and involvement of artists.</p>
 <h2>Completed Work by Who</h2>
 <ul>
-      <li><strong>Jake Dixon:</strong> All the .PHP.</li>
+      <li><strong>Jake Dixon:</strong> All the .PHP, all the databases, added content, modal form dialogs</li>
       <li><strong>Christopher Shepherdson:</strong> Events and Bulletin page.</li>
       <li><strong>Philip Bowrey:</strong> Feeder and Membership page.</li>
 	  <li><strong>Holly O'Toole:</strong> Index, About, and Contact page. Designed the overall website base in HTML/CSS, edited the background and edited/created new graphics for individual artists/bulletin/events.</li>
